--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head> </head>
   <body>
-    <h1>hello world</h1>
+    <h1>hello world?</h1>
     <script src="bundle.js"></script>
   </body>
 </html>
