--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,20 @@
 <html>
   <head> </head>
   <body>
-    <h1>hello world</h1>
+    <h1>Users</h1>
+    <table>
+      <thead>
+        <th>&nbsp;</th>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+      </thead>
+      <tbody id="users">
+
+      </tbody>
+    </table>
+  </body>
     <script src="bundle.js"></script>
   </body>
 </html>
